dark mode fixing

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -24,11 +24,10 @@
     z-index: 99;
 }
 #top_header {
-    background-color: #ffffff;
+    background-color: var(--bg-color);
     -webkit-box-shadow: 0 1px 3px rgb(0 0 0 / 11%);
     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .11);
     box-shadow: 0 1px 3px rgb(0 0 0 / 11%);
-    background-color: #fff;
     z-index: 99;
 }
 .utterances {
