--- a/assets/css/theme-change.css
+++ b/assets/css/theme-change.css
@@ -23,7 +23,7 @@
   --primary-light: #7e4c45;
   --secondary-color: #75a9d6;
   --font-color: #b7b7b7;
-  --bg-color: #131617;
+  --bg-color: #121212;
   --heading-color: #eee;
   --border-color: rgba(255, 255, 255, 0.2);
   --border-color-light: rgba(255, 255, 255, 0.2);
